<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        >


    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:hint="Ingrese el primer valor"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/editText2"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:hint="Ingrese el segundo valor"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/buttonCompare"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comparar"
        />
    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Son iguales?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>